Simply fixed spacing on save buttons

--- a/server/view/css/contentPage.css
+++ b/server/view/css/contentPage.css
@@ -325,7 +325,7 @@ h1 {
 Save and cancel buttons
 *****/
  #buttons {
-    margin-top:10px;
+    padding-top:10px;
 }
 .save {
     float:left;
